test/corpus/basic_operators.txt
==================
Empty pipeline
==================



---

(program)

==================
Single operator
==================

version

---

(program
  (pipeline
    (statement
      (invocation
        (entity
          (identifier))))))

==================
Single operator with arguments
==================

from_file "/path/to/file.csv"

---

(program
  (pipeline
    (statement
      (invocation
        (entity
          (identifier))
        (arguments
          (argument
            (expression
              (primary_expression
                (literal
                  (string))))))))))

==================
Piped operators
==================

from_stdin | where x > 0 | head

---

(program
  (pipeline
    (statement
      (invocation
        (entity
          (identifier))))
    (statement
      (invocation
        (entity
          (identifier))
        (arguments
          (argument
            (expression
              (binary_expression
                (expression
                  (primary_expression
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (number))))))))))
    (statement
      (invocation
        (entity
          (identifier))))))

==================
Newline-separated operators
==================

from_file "/path/to/file.json"
where status == "active"
select user, timestamp

---

(program
  (pipeline
    (statement
      (invocation
        (entity
          (identifier))
        (arguments
          (argument
            (expression
              (primary_expression
                (literal
                  (string))))))))
    (statement
      (invocation
        (entity
          (identifier))
        (arguments
          (argument
            (expression
              (binary_expression
                (expression
                  (primary_expression
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))))
    (statement
      (invocation
        (entity
          (identifier))
        (arguments
          (argument
            (expression
              (primary_expression
                (identifier))))
          (argument
            (expression
              (primary_expression
                (identifier)))))))))

==================
Operator with multiple pipeline arguments
==================

fork_merge {
  head 1
}, {
  tail 1
}

---

(program
  (pipeline
    (statement
      (invocation
        (entity
          (identifier))
        (pipeline_block
          (pipeline
            (statement
              (invocation
                (entity
                  (identifier))
                (arguments
                  (argument
                    (expression
                      (primary_expression
                        (literal
                          (number))))))))))
        (pipeline_block
          (pipeline
            (statement
              (invocation
                (entity
                  (identifier))
                (arguments
                  (argument
                    (expression
                      (primary_expression
                        (literal
                          (number))))))))))))))
