test/corpus/multiline.txt
==================
Multiline operator with commas
==================

a b,
  c,
  d, e

---

(program
  (pipeline
    (statement
      (invocation
        operator: (entity
          (identifier))
        arguments: (arguments
          (argument
            (expression
              (primary_expression
                (identifier))))
          (argument
            (expression
              (primary_expression
                (identifier))))
          (argument
            (expression
              (primary_expression
                (identifier))))
          (argument
            (expression
              (primary_expression
                (identifier)))))))))

==================
Backslash continuation
==================

h \
  i,
  j\
  ,k

---

(program
  (pipeline
    (statement
      (invocation
        operator: (entity
          (identifier))
        arguments: (arguments
          (argument
            (expression
              (primary_expression
                (identifier))))
          (argument
            (expression
              (primary_expression
                (identifier))))
          (argument
            (expression
              (primary_expression
                (identifier)))))))))

==================
Operator continuation with binary operator
==================

l m +
  n

---

(program
  (pipeline
    (statement
      (invocation
        operator: (entity
          (identifier))
        arguments: (arguments
          (argument
            (expression
              (binary_expression
                (expression
                  (primary_expression
                    (identifier)))
                (expression
                  (primary_expression
                    (identifier)))))))))))

==================
Parenthesized arguments with leading newline
==================

from (
  {x: 1},
  {y: 2}
)

---

(program
  (pipeline
    (statement
      (invocation
        operator: (entity
          (identifier))
        arguments: (arguments
          (argument
            (expression
              (primary_expression
                (record
                  (record_field
                    key: (identifier)
                    value: (expression
                      (primary_expression
                        (literal
                          (number)))))))))
          (argument
            (expression
              (primary_expression
                (record
                  (record_field
                    key: (identifier)
                    value: (expression
                      (primary_expression
                        (literal
                          (number))))))))))))))
